 - Ammo for Weapons;
 - Cancel Barter when the character is far;
 - Fixed bug when loading game with inventory window opened;
 - Fixed bug that let you use itens without attack actions;
 - Fixed bug at PC orientation angle after loading a game;
 - Using weapon sound effect (if exists) when using it to attack;
 - Fixed Save Files to save Character Experience points (forgot!);

Working on:
 - Weather effects;
 - Shadows;
 - Use dntMapEditor to insert sound effects at maps;
 - New models;
 - New effects for comic books;

Pending:
 - Define Counter Skills;
 - Minimap Tags;
 - Extend walls to follow map height;
 - Define paths to improve the A* at outdoor maps;
 - Put Lights on MapEditor;
 - Implement 5-15% of the talents defined on DNT Book;
 - Score at Death Screen;
 - Capacity of using talents;

================================================
|               Version 0.3.2                  |
================================================
 - Fixed a bug on saveWindow when saving over an existent save file;
 - Fixed a bug on script's interpreter of "else if" jumps;
 - Fixed a bug that keeps dead characters alive after save file load;
 - Fixed mouse 3d world projection outside the indoor map limits;
 - Fixed the text input on saveWindow (was too slow);
 - Fixed a bug of losing the equipped weapon after loading save file;
 - Fixed for Santa model completly finish the die animation;
 - Fixed to update health bar after load save file;
 - Showing "Mission Failure!" at 3D messages (not only on briefing) 
   when fail to complete a mission.

================================================
|               Version 0.3.1                  |
================================================
 - Running Animation/Action/Option for Playable Characters;
 - Anisotropic Texture Filtering;

================================================
|                Version 0.3                   |
================================================
 - Briefing now has its own window; 